# CppCMakeFrameworkGenerator

./: .gitignore  LICENSE  README.md  package.json
generators/consumer/: index.js
generators/consumer/templates/: CMakeLists.txt  README.md  main.cpp
generators/framework/: index.js
generators/framework/templates/: CMakeLists.txt  README.md  myframeworkConfig.cmake
generators/framework/templates/cmake/: AddSharedLibrary.cmake
generators/framework/templates/include/__projectName__/: utils.h
generators/framework/templates/src/__projectName__/: utils.cpp
generators/framework/templates/tests/: test_utils.cpp
